--- a/public/css/style.css
+++ b/public/css/style.css
@@ -584,6 +584,7 @@ h6 { font-size: 16px; }
 			letter-spacing: 0.3px;
 			background: rgba(255, 255, 255, 0.8);
 			box-shadow:0.1px 0.3px 5px rgba(0, 0, 222, .2);
+			border-radius:6px !important;
 		}
 		
 /* Breadcrumb Styles Starts */
@@ -2752,6 +2753,27 @@ ul.nav-wizard.nav-wizard-backnav .active ~ li a:focus {
 		border-color:#C4CCCF!important;
 		background-color:#f5f5f5;
 		padding-left:10px!important;
+		border-radius:10px !important;
+	}
+
+	fieldset input {
+		border-radius:6px !important;
+		font-size:15px !important;
+		padding:5px 5px 7px 7px !important;
+		height:auto !important;
+	}
+
+	fieldset button {
+		border-radius:10px !important;
+		padding:10px !important;
+		box-shadow:0.1px 0.3px 5px rgba(0, 0, 222, .6);
+	}
+
+	fieldset select {
+		border-radius:6px !important;
+		font-size:18px !important;
+		padding:5px !important;
+		height:auto !important;
 	}
 
 	fieldset:hover 
@@ -2784,9 +2806,9 @@ ul.nav-wizard.nav-wizard-backnav .active ~ li a:focus {
 			margin-bottom: 0px; 
 			width: 35%; 
 			border: 1px solid #ddd;
-			border-radius: 4px; 
-			padding: 5px 5px 5px 10px; 
+			padding: 5px 5px 5px 15px !important; 
 			background-color: #ffffff;
 			border-color:#C4CCCF!important;
 			text-transform: uppercase;
+			border-radius:10px !important;
 		}
