--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2738,9 +2738,8 @@ ul.nav-wizard.nav-wizard-backnav .active ~ li a:focus {
 }
 
 
-/* Estilizando meu formulario de agendamento */
+/* Estilizando formularios */
 
-	
 
     fieldset 
 	{
@@ -2759,19 +2758,22 @@ ul.nav-wizard.nav-wizard-backnav .active ~ li a:focus {
 	fieldset input {
 		border-radius:6px !important;
 		font-size:15px !important;
-		padding:5px 5px 7px 7px !important;
 		height:auto !important;
 	}
 
 	fieldset button {
 		border-radius:10px !important;
-		padding:10px !important;
+		box-shadow:0.1px 0.3px 5px rgba(0, 0, 222, .6);
+	}
+
+	button {
+		border-radius:10px !important;
 		box-shadow:0.1px 0.3px 5px rgba(0, 0, 222, .6);
 	}
 
 	fieldset select {
 		border-radius:6px !important;
-		font-size:18px !important;
+		font-size:15px !important;
 		padding:5px !important;
 		height:auto !important;
 	}
