--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2798,6 +2798,10 @@ ul.nav-wizard.nav-wizard-backnav .active ~ li a:focus {
 	}
 	.verd {
 		color:silver !important;
+	}
+
+	.crit {
+		color:#31708F !important;
 	}	
 
 	.agendar {
