--- a/public/css/style.css
+++ b/public/css/style.css
@@ -58,7 +58,7 @@ h6 {
 }
 h1 { font-size: 45px; }
 h2 { font-size: 42px; }
-h3 { font-size: 36px; }
+h3 { font-size: 26px; }
 h4 { font-size: 24px; }
 h5 { font-size: 18px; }
 h6 { font-size: 16px; }
@@ -146,13 +146,15 @@ h6 { font-size: 16px; }
 	background-color: #fff;
 }
 .btn-main {
-	color: #4db1e2;		
+	color: #009bdb;		
+	font-weight: bolder;
+	
 }
 .btn-main:hover, 
 .btn-main:focus,
 .btn-main:active,
 .btn-main.active {
-	color: #0186d5;
+	color:#27435a;
 }
 
 .btn-secondary {
@@ -306,7 +308,7 @@ h6 { font-size: 16px; }
 		#nav .navbar-nav > li > a:focus {
 			border-top: 2px solid SteelBlue;
 			color: black;
-			font-weight: bolder;
+			font-weight: ;
 		}
 			#nav .dropdown-menu {
 				background-color: SteelBlue;
@@ -412,11 +414,13 @@ h6 { font-size: 16px; }
 		width: 45%;
 		right: 10%;
 		top: 30%;
+
 	}
 		.camera_caption > div {
 			padding: 35px 50px;
 			color: #8d8d8d;
 			background: rgba(255, 255, 255, 0.8);
+			border-radius: 100px;
 		}
 		.camera_prev {
 			left: 1%;
@@ -453,40 +457,76 @@ h6 { font-size: 16px; }
 			color: #323232;
 		}
 		.camera_wrap h3{
-			color: black;
-			font-weight: bolder;
+			font-size: 20px;
+			color:#27435a;
+			font-weight: bold;
+			text-align: center;
+			text-transform:uppercase;
 		}
 		.camera_wrap h2 + h2 {
 			margin-top: 5px;
 			margin-bottom: 5px;
 		}
 		.camera_wrap p{
-			color: DimGray;
+			color: black;
 			font-weight: 500;
 			text-align: justify;
-			text-indent: 40px;
+			text-indent: 25px;
 		}
 		.camera_wrap h2 span {
 			font-weight: 400;
+
 		}
 		.camera_caption p {
 			margin-top: 15px;
 			margin-bottom: 15px;
+			font-weight: 400;
 		}
 		.camera_caption p, 
-		.camera_caption a.btn-secondary {
-			font-size: 18px;
+		.camera_caption a.btn-primary,.camera_caption a.btn-success {
+			font-size: 16px;
 		}
-		.camera_caption a.btn-secondary {
-			margin-top: 10px;
+		a.btn-primary{
+			margin-top: 0px;
 			padding: 13px 26px;
-			background-color: #009bdb !important;
+			background-color: #08298A !important;
+			border-radius: 20px;
+			padding: 10px;
+			text-transform:uppercase;
 		}
-		.camera_caption a.btn-secondary:hover, 
-		.camera_caption a.btn-secondary:focus, 
-		.camera_caption a.btn-secondary:active, 
-		.camera_caption a.btn-secondary.active {
-			background-color: #323232 !important;
+		.camera_caption p span.hemo{
+			color: #191970;
+			font-size: 18px;
+			font-weight: bolder;
+			text-transform:uppercase;
+		}
+		.camera_caption p span.diag{
+			color: #8B0000;
+			font-weight: bolder;
+			font-size: 18px;
+			text-transform:uppercase;
+		}
+		.camera_caption a.btn-success{
+			margin-top: 0px;
+			padding: 13px 26px;
+			background-color: #088A08 !important;
+			border-radius: 20px;
+			padding: 10px;
+			text-transform:uppercase;
+		}
+		.camera_caption a.btn-primary:hover, 
+		.camera_caption a.btn-primary:focus, 
+		.camera_caption a.btn-primary:active, 
+		.camera_caption a.btn-primary.active {
+			background-color: #0B2161 !important;
+			font-weight: 500;
+		}
+		.camera_caption a.btn-success:hover, 
+		.camera_caption a.btn-success:focus, 
+		.camera_caption a.btn-success:active, 
+		.camera_caption a.btn-success.active {
+			background-color: #0B6121 !important;
+			font-weight: 500;
 		}
 		
 /* Main Banner Styles Starts */
@@ -559,9 +599,6 @@ h6 { font-size: 16px; }
 	.main-banner.paginaLogin{
 		background: url(../images/banners/privacidade.jpg) center right;
 	}
-	.main-banner.atenderUser{
-		background: url(../images/banners/usr.jpg) center right;
-	}
 	.main-banner.admins{
 		background: url(../images/banners/admin_login.png) center top;
 	}	
@@ -573,13 +610,6 @@ h6 { font-size: 16px; }
 	}	
 	.main-banner.pgAgenda{
 		background: url(../images/banners/preventivo.jpg) center top;
-	}
-	.main-banner.medicos{
-		background: url(../images/banners/direcao.jpg) center top;
-	}
-
-	.main-banner.horarios{
-		background: url(../images/banners/financeiro.png) center top;
 	}	
 	.main-banner h2 {
 		margin-top: 0;
@@ -1178,6 +1208,8 @@ h6 { font-size: 16px; }
 	position: relative;
 	color: #fff;
 	background-color: #4db1e2;
+	border-top-left-radius: 30px;
+	border-top-right-radius: 30px;
 }
 	.book-appointment-box .box-img {
 		position: absolute;
@@ -1202,6 +1234,7 @@ h6 { font-size: 16px; }
 		padding: 10px 25px;
 		font-size: 18px;
 		font-weight: bold;
+		border-radius: 	10px;
 	}
 	
 /* Tabs Styles Starts */	
@@ -1717,6 +1750,7 @@ ul#doctors-grid {
 	.comment-form .form-control {
 		padding: 12px 16px;
 	}
+	
 	.comment-form input.form-control {
 		height: 42px;
 		line-height: normal;
@@ -2738,6 +2772,7 @@ ul.nav-wizard.nav-wizard-backnav .active ~ li a:focus {
   color: #999999;
   background: #ededed;
 }
+
 
 
 /* estilizando o calendario via datepicker */
